Added new Checkstyle rules